--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -1,7 +1,7 @@
-.home-container{
+.home-container {
     padding-top: 70px;
     height: 100vh;
-    background: url(./../../assets/home-background-pokemon.jpg) no-repeat center center fixed; 
+    background: url(./../../assets/home-background-pokemon.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -9,134 +9,88 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    & .pokemon-img-container{
-       & img {
-        width: 500px;
-       } 
-    }
-    & .home-card{
-        & .pokemon-img-card{
-            & img {
-                width: 100px;
-            }
+
+    & .pokemon-img-container {
+        & img {
+            width: 500px;
         }
     }
-    .card{
-        border: 5px solid rgba(0, 0, 0, 2.16);
+
+    .card {
+        border: 5px solid;
         height: 400px;
         width: 320px;
         background-color: rgba(0, 0, 0, 0.16);
         backdrop-filter: blur(20px);
         border-radius: 8px;
-        box-shadow: 20px 20px 22px rgba(0,0,0,0.2);
-        font-family: 'Poppins',sans-serif;
-    }
-    .card-img{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 120px;
-        width: 120px;
-        background-color: rgba(255, 255, 255, 0.06);
-        -webkit-backdrop-filter: blur(20px);
-                backdrop-filter: blur(20px);
-        border-radius: 50%;
-        position: absolute;
-        margin: 30px auto 20px  auto;
-        left: 0;
-        right: 0;
-    
-        img{
-           max-width: 120px;
-           background-size: cover;
-           height: 90%;
-           border-radius: 50%;
-       }
+        box-shadow: 20px 20px 22px rgba(0, 0, 0, 0.2);
+        font-family: 'Poppins', sans-serif;
+
+        .card-header{
+            position: absolute;
+            height: 90px;
+            width: 100%;
+            border-bottom: 5px solid;
+            .card-id{
+                opacity: 1;
+                font-size: 2rem;
+            }
+        }
+
+        .card-img {
+            border: 5px solid;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 120px;
+            width: 120px;
+            background-color: black;
+            -webkit-backdrop-filter: blur(20px);
+            backdrop-filter: blur(20px);
+            border-radius: 50%;
+            position: absolute;
+            margin: 30px auto 20px auto;
+            left: 0;
+            right: 0;
+            img {
+                max-width: 120px;
+                background-size: cover;
+                height: 90%;
+                border-radius: 50%;
+            }
+        }
+
+        .desc {
+            width: 100%;
+            text-align: center;
+            position: absolute;
+            top: 160px;
+            & .pokemon-abilities{
+                display: flex;
+                justify-content: space-around;
+            }
+        }
+        .details {
+            width: 100%;
+            text-align: center;
+            position: absolute;
+        }
+
+        .primary-text {
+            color: #333;
+            font-size: 16px;
+            font-weight: 600;
+            letter-spacing: 0.7px;
+            margin: 5px 0;
+        }
+
+        .secondary-text {
+            color: #111;
+            font-weight: 400;
+            font-size: 14px;
+            letter-spacing: 1px;
+            margin: 5px 0;
+        }
     }
 
-    .desc{
-        width: 100%;
-        text-align: center;
-        position: absolute;
-        top: 160px;
-    }
-    .primary-text{
-        color: #333;
-        font-size: 16px;
-        font-weight: 600;
-        letter-spacing: 0.7px;
-        margin: 5px 0;
-    }
-    .secondary-text{
-        color: #111;
-        font-weight: 400;
-        font-size: 14px;
-        letter-spacing: 1px;
-        margin: 5px 0;
-    }
-    button{
-        background-color: rgba(255, 255, 255, 0.06);
-        -webkit-backdrop-filter: blur(20px);
-                backdrop-filter: blur(20px);
-        border: none;
-    
-    }
-    .details{
-        display: -ms-grid;
-        display: grid;
-        width: 100%;
-        height: 70px;
-        padding: 5px 0;
-        -ms-grid-columns: auto auto;
-        grid-template-columns: auto auto;
-        background-color: rgba(255, 255, 255, 0.06);
-        -webkit-backdrop-filter: blur(20px);
-                backdrop-filter: blur(20px);
-        position: absolute;
-        bottom: 0;
-        border-radius: 0 0 8px 8px;
-    }
-    .details>div{
-        text-align: center;
-    }
-    .details>div:first-child{
-        border-right: 2px solid rgba(255,255,255,0.08);
-    }
-    button{
-        width: 80%;
-        padding: 15px 0;
-        position: absolute;
-        left: 10%;
-        top: 240px;
-        border-radius: 5px;
-        outline: none;
-    }
-    a{
-        color: #ffffff;
-        font-family: "Poppins",sans-serif;
-        font-weight: 400;
-        letter-spacing: 0.5px;
-        position:absolute;
-        right:20px ;
-        top:20px;
-        border:3px solid #ffffff;
-        border-radius: 5px;
-        text-decoration:none;
-    }
-    a>.fa{
-      color: #FF0000;
-    }
-    @media screen and (min-width: 451px) {
-      a{
-        font-size: 18px;
-         padding:8px 12px 8px 12px;
-      }
-    }
-    
-    @media screen and (max-width: 450px) {
-      a{
-        font-size: 12px;
-         padding:5px 8px 5px 8px;
-      }
-    }
 }
